--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,9 +1,6 @@
 on:
-  push:
-    branches:
-      - main
-    tags:
-      - 'v*'
+  schedule:
+      - cron: "*/5 * * * *"
 
 name: Create Release
 
