--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -36,16 +36,16 @@ jobs:
         git tag $NEW_TAG
         git push origin $NEW_TAG
 
-  #create-github-release:
-  #  name: Create GitHub Release
-  #  runs-on: ubuntu-latest
-  #  permissions:
-  #    contents: write
-  #  steps:
-  #    - name: Checkout code
-  #      uses: actions/checkout@v4
-  #    - name: Create Release
-  #      run: gh release create ${{ github.ref }} --generate-notes
-  #      env:
-  #        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  create-github-release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Create Release
+        run: gh release create ${{ github.ref }} --generate-notes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
