--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -8,12 +8,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.generate_tag.outputs.test }}
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
       with:
           fetch-depth: '0'
-
     - name: Generate Git Tag
       id: generate_tag
       run: |
@@ -27,25 +28,29 @@ jobs:
         fi
         NEW_TAG="${VERSION_PREFIX}${VERSION_MAJOR_MINOR}.${VERSION_PATCH}"
         echo "Generated new tag: $NEW_TAG"
-        echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
+        echo "test=$NEW_TAG" >> $GITHUB_OUTPUT
 
-    - name: Push Git Tag
-      run: |
-        git config user.name "GitHub Actions"
-        git config user.email "github-actions@users.noreply.github.com"
-        git tag $NEW_TAG
-        git push origin $NEW_TAG
+    #- name: Push Git Tag
+    #  run: |
+    #    git config user.name "GitHub Actions"
+    #    git config user.email "github-actions@users.noreply.github.com"
+    #    git tag $NEW_TAG
+    #    git push origin $NEW_TAG
 
   create-github-release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
+    needs: build
     permissions:
       contents: write
     steps:
+      - env:
+          OUTPUT1: ${{needs.build.outputs.output1}}
+        run: echo "$OUTPUT1"
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Create Release
-        run: gh release create ${{ github.env.NEW_TAG }} --generate-notes
+        run: gh release create $OUTPUT1 --generate-notes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
