--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     outputs:
-      output1: ${{ steps.generate_tag.outputs.test }}
+      tag: ${{ steps.generate_tag.outputs.tag }}
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -26,16 +26,9 @@ jobs:
         else
           VERSION_PATCH=$((VERSION_PATCH + 1))
         fi
-        NEW_TAG="${VERSION_PREFIX}${VERSION_MAJOR_MINOR}.${VERSION_PATCH}"
-        echo "Generated new tag: $NEW_TAG"
-        echo "test=$NEW_TAG" >> $GITHUB_OUTPUT
-
-    #- name: Push Git Tag
-    #  run: |
-    #    git config user.name "GitHub Actions"
-    #    git config user.email "github-actions@users.noreply.github.com"
-    #    git tag $NEW_TAG
-    #    git push origin $NEW_TAG
+        TAG="${VERSION_PREFIX}${VERSION_MAJOR_MINOR}.${VERSION_PATCH}"
+        echo "Generated new tag: $TAG"
+        echo "tag=$TAG" >> $GITHUB_OUTPUT
 
   create-github-release:
     name: Create GitHub Release
@@ -45,12 +38,12 @@ jobs:
       contents: write
     steps:
       - env:
-          OUTPUT1: ${{needs.build.outputs.output1}}
-        run: echo "$OUTPUT1"
+          TAG: ${{needs.build.outputs.tag}}
+        run: echo "$TAG"
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Create Release
-        run: gh release create ${{needs.build.outputs.output1}} --generate-notes
+        run: gh release create ${{needs.build.outputs.tag}} --generate-notes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
