--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -13,12 +13,8 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Configure Git
-        run: |
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
       - uses: google-github-actions/release-please-action@v4
+        id: release
         with:
           # This is a personal access token (PAT) which has been
           # configured as a GitHub action secret.
