--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -13,9 +13,13 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: google-github-actions/release-please-action@v4
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          # This release type is for repos with a version.txt and
-          # a CHANGELOG.md.
-          release-type: simple
+          tag_name: 'ingestion-0.1'
+          release_name: 'Ingestion Client 0.1'
+          draft: false
+          prerelease: false
