--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -13,9 +13,17 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+      - uses: google-github-actions/release-please-action@v4
+        with:
+          # This is a personal access token (PAT) which has been
+          # configured as a GitHub action secret.
+          token: ${{ secrets.GITHUB_TOKEN }}
+          # This release type is for repos with a version.txt and
+          # a CHANGELOG.md.
+          release-type: simple
+          skip-github-release: true
+          skip-github-pull-request: true
+      - uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -23,3 +31,5 @@ jobs:
           release_name: 'Ingestion Client 0.1'
           draft: false
           prerelease: false
+
+
