ci: modify echo

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -22,15 +22,21 @@ jobs:
           # This release type is for repos with a version.txt and
           # a CHANGELOG.md.
           release-type: simple
-          skip-github-release: false
           skip-github-pull-request: true
-      - uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: 'v${{steps.release.outputs.major}}'
-          release_name: 'Ingestion Client ${{steps.release.outputs.major}}'
-          draft: false
-          prerelease: false
+      - run: |
+          echo "${{steps.release.outputs.major}}"
+          echo "${{steps.release.outputs.minor}}"
+          echo "${{steps.release.outputs.patch}}"
+          echo "${{steps.release.outputs.release_created}}"
+          echo "${{steps.release.outputs.sha}}"
+          echo "${{steps.release.outputs.tag_name}}"
+      # - uses: actions/create-release@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     tag_name: 'v${{steps.release.outputs.major}}'
+      #     release_name: 'v${{steps.release.outputs.major}}'
+      #     draft: false
+      #     prerelease: false
 
 
