--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -23,6 +23,7 @@ jobs:
           # a CHANGELOG.md.
           release-type: simple
           skip-github-pull-request: true
+          skip-github-release: false
           
       - name: Echo release outputs
         if: ${{ steps.release.outputs }}
