fix: continue on error

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -22,6 +22,7 @@ jobs:
           # This release type is for repos with a version.txt and
           # a CHANGELOG.md.
           release-type: simple
+        continue-on-error: true
           
       - name: Echo release outputs
         if: ${{ steps.release.outputs }}
