feat: new feat (#81)
* feat: a new feature

* fix: modify release

* fix: continue on error

* feat: skip pr

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -22,6 +22,7 @@ jobs:
           # This release type is for repos with a version.txt and
           # a CHANGELOG.md.
           release-type: simple
+          skip-github-pull-request: true
         continue-on-error: true
           
       - name: Echo release outputs
@@ -36,5 +37,5 @@ jobs:
       #     release_name: 'v${{steps.release.outputs.major}}'
       #     draft: false
       #     prerelease: false
-
+#
 
