--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -26,7 +26,8 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           output-file: 'CHANGELOG.md'
           git-user-name: 'github-actions[bot]'
-          git-user-email: 'github-actions[bot]@users.noreply.github.com'      
+          git-user-email: 'github-actions[bot]@users.noreply.github.com'
+          version-file: './pyproject.toml'      
       
       - name: Create Release
         uses: actions/create-release@v1
