--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -23,8 +23,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name:  'v3.0.0'
+          release_name: Release 
           body: |
             Release notes go here.
           draft: false
