ci: add package

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -23,7 +23,8 @@ jobs:
         id: semantic
         with:
           tag-format: 'v${version}'
-          additional-packages: ['conventional-changelog-conventionalcommits@7']
+          additional-packages: |
+            ['conventional-changelog-conventionalcommits@7']
           plugins: |
             [
               '@semantic-release/commit-analyzer',
