--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -3,7 +3,6 @@ on:
     workflows: ["CI"]
     types:
       - completed
-  merge_group:
 
 permissions:
   contents: write
@@ -27,7 +26,12 @@ jobs:
             ['conventional-changelog-conventionalcommits@7']
           plugins: |
             [
-              '@semantic-release/commit-analyzer',
+              [
+                "@semantic-release/commit-analyzer",
+                { 
+                  "preset": "conventionalcommits"
+                }
+              ],
               [
                 "@semantic-release/release-notes-generator",
                 {
